--- a/Project3/style.css
+++ b/Project3/style.css
@@ -1,13 +1,6 @@
-*,
-*:before,
-*:after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body{
     background-color: #6B705C;
+    text-align: center;
   }
   .title{
     color: #CB997E;
@@ -16,17 +9,93 @@ body{
     text-decoration-line: overline;
     font-size: 40px;
   }
-
-
-.container{
-    position:absolute;
-    width:60%;
-    border: 10px black;
-    top: 50%;
-    left: 50%;
+  .subtitle{
+    color: #CB997E;
+    text-shadow: 1px 1px 1px black;
+    text-align:center;
+    text-decoration-line: underline;
+    font-size: 21px;
+  }
+  .container{
+    width:70%;
+    height: 1000px;
+    border: 3px black;
     border-style: solid;
-    padding:50px 10px;
+    border-radius: 10px;
+    margin:auto;
+    padding: 10px;
     background-color: #FFE8D6;
-    display:grid;
-    justify-items:center;
+  }
+  .score{
+    height: 120px;
+    width:200px;
+    float: left;
+    flex-wrap: wrap;
+    align-content: center;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: #DDBEA9;
+    border: 3px black;
+    border-style: solid;
+  }
+  .reset{
+    height: 80px;
+    width:150px;
+    float: right;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    box-sizing: border-box;
+    border-radius:10px;
+    background-color:#DDBEA9 ;
+    border: 3px black;
+    border-style: solid;
+  }
+  .Guess{
+    height: 500px;
+    width:60%;
+    margin: auto;
+    clear:both;
+    border-radius: 10px;
+    background-color:#A5A58D ;
+    box-shadow: 10px;
+    align-items: center;
+    margin-top: 160px;
+    border: 3px black;
+    border-style: solid;
+  }
+  .input{
+    border-radius:10px;
+    height: 40px;
+    margin-top: 5px;
+    background-color: #DDBEA9;
+  }
+  .btn1{
+    margin-top: 10px;
+    border-radius: 10px;
+    width:100px;
+  }
+  .history{
+    width: 50%;
+    height: 50px;
+    margin: auto;
+    border: 3px black;
+    border-style: solid;
+    background-color: #DDBEA9;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 12px;
+  }
+  .number{
+    width: 50%;
+    height: 100px;
+    margin: auto;
+    margin-top: 2px;
+    border: 3px black;
+    border-style: solid;
+    background-color: #DDBEA9;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 12px;
   }
