--- a/Project2/style.css
+++ b/Project2/style.css
@@ -1,1 +1,297 @@
+body {
+    background-color: #FAEBD7
+}
+
+.headerBox {
+    height: 100px;
+    padding-left: 20%;
+    margin-bottom: 4%;
+}
+
+.leftbox {
+    border: 2px solid olive;
+    border-radius: 30px;
+    height: 50%;
+    width: 15%;
+    float: left;
+    animation: enlargeLogo 3.0s;
+    animation-iteration-count: infinite;
+}
+
+.headerbox {
+    height: 100%;
+    width: 75%;
+}
+
+.bigflyingtext {
+    margin-left: 15%;
+    color: olive;
+    font-family: cursive;
+    animation: moveTitle: 1.0s;
+    animation-iteration-count: infinite;
+}
+
+.smallflyingtext {
+    animation: moveSubtitle: .50s;
+    animation-iteration-count: infinite;
+}
+
+.Promo {
+    height: 55px;
+    width: 97.7%;
+    margin: -5% 2% 0% 1.2%;
+    overflow: hidden;
+}
+
+.Promotiongroup {
+    height: 100%;
+    width: 300%;
+    animation: slideshow 10s;
+    animation-iteration-count: infinite;
+}
+
+.Promo {
+    text-align: center;
+    float: left;
+    height: 100%;
+    padding-top: 4px;
+}
+
+@keyframes enlargeLogo {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+@keyframes logoAnimate {
+    0% {
+        width: 110px;
+    }
+
+    50% {
+        width: 100px;
+    }
+
+    100% {
+        width: 110px;
+    }
+}
+
+@keyframes slideshow {
+    0% {
+        margin-left: 0%
+    }
+
+    50% {
+        margin-left: -100%
+    }
+}
+
+.flowerBlock {
+    width: 97.7%;
+    position: relative;
+    margin: 0% 2% 4% 1.2%;
+    margin-bottom: 40px;
+}
+
+.flowerTextBlock {
+    border: 4px solid white;
+    position: absolute;
+    padding: 10px 20px 35px 25px;
+}
+
+.flowerBlock {
+    height: 350px;
+    width: 36%;
+    float: left;
+    margin-left: 9%;
+}
+
+.block1 {
+    height: 350px;
+    width: 100%;
+}
+
+.block1>img {
+    height: 350px;
+    width: 100%;
+    opacity: 0.8;
+}
+
+.block2 {
+    background-image: linear-gradient(to top right, #c9c0bb, #FAEDE6, #DDEEBC);
+    color: olive;
+    height: 300px;
+    width: 80%;
+    padding: 25px;
+    position: relative;
+    float: left;
+}
+
+.ingredients2 {
+    padding-right: 5%;
+}
+
+.single-products {
+    color: #454d32;
+    margin-left: 5%;
+    margin-top: 36%;
+}
+
+.productrow {
+    height: 500px;
+    margin: 3% 4% 5% 5%;
+    text-align: center;
+}
+
+.productbox {
+    height: 100%;
+    width: 30%;
+    float: left;
+}
+
+
+
+.buttonMain {
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    padding: 20px ;
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+}
+
+.buttonMain:hover {
+    background-color: lightgray;
+    color: black;
+}
+
+.modalWindow {
+    height: 60%;
+    width: 40%;
+    top: 5%;
+    left: 20%;
+    right: 60%;
+    opacity: 0;
+    position: fixed;
+    pointer-events: none;
+}
+
+.modalWindow:target {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.productBlock {
+    background-color: white;
+    top: -0.8%;
+    left: -0.8%;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.exit {
+    background-color: lightgray;
+    text-decoration: none;
+    padding: 0.5% 1% 0.5% 1.5%;
+    height: 5%;
+    width: 5%;
+    color: black;
+    float: right;
+}
+.productrow {
+    padding-left: 5%;
+    float: left;
+    margin-top: -10%;
+    text-align: left;
+    font-size: 14px;
+}
+
+.greybox {
+    background-color: lightgray;
+    height: 20%;
+    margin-top: 70%;
+    text-align: left;
+    font-size: 12px;
+}
+
+.exitMain {
+    background-color: white;
+    color: black;
+    font-size: 12px;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+    transition-duration: 0.4s;
+}
+
+
+.productbox {
+    height: 100%;
+    width: 35%;
+    float: left;
+}
+
+.productbox>img {
+    height: 80%;
+    width: 80%;
+}
+
+.footerStage {
+    height: 350px;
+    width: 100%;
+    background: #181818;
+    margin: -7% 0% 0% 1%;
+    color: white;
+    position: absolute;
+}
+
+.footer {
+    width: 99.7%;
+    margin-left: 1.3%;
+}
+
+.footer {
+    height: 100%;
+    width: 24%;
+    margin-top: 2%;
+    float: left;
+    text-align: center;
+}
+
+.social-header {
+    text-align: right;
+    margin: 10%;
+}
+
+.social {
+    margin-top: -5%;
+    margin-left: 20%;
+    height: 30%;
+    width: 40%;
+    float: right;
+}
+
+.logo {
+    height: 30%;
+    width: 10%;
+    margin-right: 5%;
+    position: relative;
+}
+
+.bottomText {
+    font-size: 12px;
+    color:black;
+    margin-top: 20%;
+    margin-left: -100%;
+    text-align: center;
+    position: relative;
+}
 
